<resources>
    <string name="app_name">CameraX APP</string>

    <string name="switchButton">Answer screen</string>
    <string name="declineButton">Decline</string>
    <string name="acceptButton">Accept</string>
    <string name="response_image">Response image from server</string>
    <string name="testbutton">testButton</string>
    <string name="del1">Go to main screen</string>
    <string name="imageToReview" />
    <string name="del">Send Image</string>
    <string name="goButton">Go</string>
    <string name="undoButton">Undo</string>
    <string name="press_here_to_take_photo">Press here to take photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="textview">TextView</string>
    <string name="go_to_game">Go to Game</string>
    <string name="start_new_game">Start New Game</string>
    <string name="to_menu">To Menu</string>
    <string name="to_active_game">To Active Game </string>
    <string name="get_id_from_server">Get ID from server</string>
    <string name="to_take_photo">To take photo</string>
    <string name="to_validate">To validate</string>
    <string name="new_move">New move</string>
    <string name="delete_user_at_server">Delete user at server</string>
    <string name="decline_move">Decline move</string>
    <string name="menu_header">Main menu</string>
    <string name="take_photo_header">1. Take Photo</string>
    <string name="validate_photo_header">2. Validate Photo</string>
    <string name="Response_header">3. Response from server</string>

</resources>